@@ -79,10 +79,7 @@ gcov:
 	@rm -f `ls -1 *.gcov | fgrep -v .cxx.gcov`
 	ls -l *.cxx.gcov
 
-docs:	runtime/Doxyfile
-	cd runtime && doxygen Doxyfile
-
-rpm:	dist docs
+rpm:	dist
 	rpmbuild -ta ${PACKAGE_TARNAME}-${PACKAGE_VERSION}.tar.gz
 
 clean-local:
