@@ -1,3 +1,8 @@
+2005-08-25  Frank Ch. Eigler  <fche@redhat.com>
+
+	* Makefile.am (docs): Removed target.
+	* Makefile.in: Regenerated.
+
 2005-08-25  Roland McGrath  <roland@redhat.com>
 
 	* Makefile.am (EXTRA_DIST): Remove directory from wildcard file names.
